--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  padding: 50px;
   color: white;
 }
 
@@ -22,11 +22,7 @@
   color: white;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-body {
-  background: blue;
+.container {
+  margin-right: 2%;
+  margin-top: 2%;
 }
